# ToDoList

./: .dockerignore  .editorconfig  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml  pytest.ini  readme.md  tg_get_response.json  tg_send_response.json
.github/workflows/: build_and_push.yaml
bot/: admin.py  models.py  serializers.py  urls.py  views.py
bot/management/commands/: runbot.py  test_bot.py
bot/migrations/: 0001_initial.py
bot/tg/: bot_logic.py  client.py  schemas.py
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
deploy/: docker-compose.yaml
goals/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py
goals/migrations/: 0001_initial.py  0002_board_goalcategory_board_boardparticipant.py  0003_create_new_objects.py  0004_alter_goalcategory_board.py
goals/serializers/: categorises_serializers.py  comments_serializers.py  goals_serializers.py
goals/views/: boards.py  categories.py  comments.py  goals.py
tests/: conftest.py  factories.py  test_views.py
todolist/: fields.py  models.py  settings.py  urls.py
