[tool.poetry]
name = "diplom"
version = "0.1.0"
description = ""
authors = ["karinavolodina <volodinakarina27@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.2"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
